# Cformatter

./: .gitignore  CMakeLists.txt  README.md  cmdparser.h  cmdpaser.c  main.c  stringarray.c  stringarray.h
CamelAndPascalCases/: CamelCase.c  PascalCase.c  PascalCase.h
CamelCase/: CamelCase.c  CamelCase.h
ChangeCommets/: ChangeComments.c  ChangeComments.h
CheckVariablesAndFunctions/: CheckFunctions.c  CheckFunctions.h  CheckVariables.c  CheckVariables.h  FindRecursion.c  FindRecursion.h  RemovePreprocessors.c  RemovePreprocessors.h
CmdParser/: cmdparser.c  cmdparser.h
Examples/: cio.c  cio2.c
Formatter/: Formatter.c  Formatter.h
HaltTester/: halttester.h  namedvar.c  namedvar.h  namedvarcondition.c  namedvarcondition.h
MaxLoopNesting/: MaxLoopNesting.c  MaxLoopNesting.h
StringArray/: stringarray.c  stringarray.h
StringTools/: StringTools.c
tests/cmdparser/: cmdparserTests.c
tests/stringarray/: stringarrayTests.c
